--- a/linear/index.html
+++ b/linear/index.html
@@ -1,4 +1,5 @@
 
 <title>Matrix</title>
 <script src="bin/maybe.js"></script>
+<script src="bin/type.js"></script>
 <script src="bin/matrix.js"></script>
