Linear Algebra: Gave index appropriate title; in matrix fill() was fixed, transpose() was added, and disclaimer/todo was noted

--- a/linear/index.html
+++ b/linear/index.html
@@ -1,5 +1,5 @@
 
-<title>Matrix</title>
+<title>Linear</title>
 <script src="bin/maybe.js"></script>
 <script src="bin/type.js"></script>
 <script src="bin/matrix.js"></script>
