Linear Algebra: Aesthetic commit, essentially nothing useful done

--- a/linear/index.html
+++ b/linear/index.html
@@ -3,3 +3,5 @@
 <script src="bin/maybe.js"></script>
 <script src="bin/type.js"></script>
 <script src="bin/matrix.js"></script>
+<script src="bin/vector.js"></script>
+<script src="bin/scalar.js"></script>
