Matrix: Removed vector from index, implemented add() and cleaned up mult() in matrix

--- a/matrix/index.html
+++ b/matrix/index.html
@@ -1,6 +1,5 @@
 
-<title>Linear</title>
+<title>Matrix</title>
 <script src="bin/maybe.js"></script>
 <script src="bin/type.js"></script>
 <script src="bin/matrix.js"></script>
-<script src="bin/vector.js"></script>
