--- a/matrix/index.html
+++ b/matrix/index.html
@@ -1,5 +1,3 @@
 
 <title>Matrix</title>
-<script src="bin/maybe.js"></script>
-<script src="bin/type.js"></script>
-<script src="bin/matrix.js"></script>
+<script src="bin/matrix.type.js"></script>
